Fix vertical alignment of indices table text column

--- a/wp-content/themes/chassesautresor/assets/css/general.css
+++ b/wp-content/themes/chassesautresor/assets/css/general.css
@@ -210,6 +210,7 @@ tbody tr:nth-child(even) {
   padding: 8px 12px;
   border: none;
   /*color: var(--color-text-primary);*/
+  vertical-align: middle;
 }
 
 .stats-table th {
